# au-cliniko-mcp

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
docs/: API-LIMITATIONS.md  COMPLIANCE.md  INSTALL-SOP.md  PIA-template.md  SECURITY.md
src/au_cliniko_mcp/: __init__.py  audit.py  auth.py  client.py  errors.py  phi.py  server.py  shaping.py  vault.py
src/au_cliniko_mcp/tools/: __init__.py  aggregators.py  appointments.py  available_time.py  bookings.py  businesses.py  communications.py  insights.py  invoices.py  patients.py  practitioners.py  recalls.py  revenue.py  treatment_notes.py  workflows.py
tests/integration/: eval_results.md  eval_suite.py  llm_eval.py  llm_eval_results.json  seed_dummy_data.py  seed_full_practice.py  smoke_test.py
tests/unit/: test_compliance.py  test_shaping.py  test_shard_detection.py
